2003-07-20  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/remoteControlBrackets.jsp: Reworked to always
	recompute the teams and don't use session variables.  This makes
	sure we don't have caching problems. (707839)

	* web/playoff/adminbrackets.jsp: Reworked to always recompute the
	teams and allow the run number to advance to to be passed in as a
	parameter.  This should fix the problems with refresh and
	advancement of rounds. (707838)

2003-07-19  Jon Schewe  <jpschewe@mtu.net>

	* web/report/summarizePhase1.jsp: Modified query to group by
	ScoreGroup and Category.  (707841)

2003-07-16  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): varchar fields are
	limited to 255 characters.

2003-07-06  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): Make division a string
	rather than a number (707893)

	* build.xml: the compile.jsp task is broken again, so I've taken
	it out of the build.  Gonna have to fix it again later.

	* web/admin/editTeam.jsp: Added support for moving teams from one
	tournament to the next (707876).  
	Continued cleanup by adding JSTL tags.

	* scripts/convertTournaments.sql:  I think I've got all of the
	table changes in now for hierarchial tournaments (707876), along
	with some cleanups to table fields.

	* src/fll/xml/GenerateDB.java (generateDB): More work on
	hierarchial tournaments (707876).  Cleaned up the tables by
	removing extra columns that aren't used.

2003-07-02  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/model/SubjectiveTableModel.java (SubjectiveTableModel):
	cleaned up javadoc

	* src/fll/web/report/FinalComputedScores.java
	(FinalComputedScores): Cleaned up javadoc

2003-06-11  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Upgraded to Tomcat 4.1.x (4.1.18)

2003-04-27  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/editTeam.jsp: Convert null values to "" for editing.

2003-04-24  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/gui/SubjectiveFrame.java (SubjectiveFrame): When