@@ -1,5 +1,11 @@
 2003-07-20  Jon Schewe  <jpschewe@mtu.net>
 
+	* web/admin/index.jsp: Added link to add tournaments for each
+	region in the teams table. (766898)
+
+	* src/fll/Queries.java (insertTournamentsForRegions): Added
+	ability to add tournaments for each region in the teams table. (766898) 
+
 	* web/playoff/remoteControlBrackets.jsp: Reworked to always
 	recompute the teams and don't use session variables.  This makes
 	sure we don't have caching problems. (707839)
